--- a/css/app.css
+++ b/css/app.css
@@ -66,7 +66,8 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY(0);
+    transform: rotateY(180deg);
+    transition: width 2s, height 2s, transform 0.8s;
     background: #02b3e4;
     cursor: default;
 }
