Finish animation to match and unmatch cards

--- a/css/app.css
+++ b/css/app.css
@@ -82,6 +82,11 @@ h1 {
     font-size: 33px;
 }
 
+.deck .card.cardBackground {
+    background: #ff5000;
+    /*background-color: red;*/
+}
+
 /*
  * Styles for the Score Panel
  */
