Add skelet for leaderBoard

--- a/css/app.css
+++ b/css/app.css
@@ -221,3 +221,37 @@ animation-name: rotateIn;
     cursor: pointer;
     background-color: rgb(151, 79, 199);
 }
+
+/* The LeaderBoard Modal (background) */
+.leaderboard {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* LeaderBoard Modal Content */
+.leaderboard-content {
+    /*background-color: #fefefe;*/
+    /*text-align: center;*/
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    border-radius: 10px;
+    background: rgba(147,206,222,1);
+    background: -moz-linear-gradient(-45deg, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(189,73,189,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(147,206,222,1)), color-stop(41%, rgba(117,189,209,1)), color-stop(100%, rgba(189,73,189,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(189,73,189,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(189,73,189,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(189,73,189,1) 100%);
+    background: linear-gradient(135deg, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(189,73,189,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#bd49bd', GradientType=1 );
+}
